fix shell visibility

--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -40,9 +40,10 @@
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-build>
             </div>
             <div class="row"
-                 data-ng-if="$ctrl.isDemoMode() || $ctrl.version.spec.runtime === 'java'">
+                 data-ng-if="!$ctrl.isInvisibleForCurrentRuntime($ctrl.version.spec.runtime) || $ctrl.isDemoMode()"
+                 data-ng-class="{'shell-runtime': $ctrl.version.spec.runtime === 'shell' && !$ctrl.isDemoMode()}">
                 <ncl-version-configuration-logging
-                        data-ng-class="{'invisible-block': !$ctrl.isDemoMode()}"
+                        data-ng-class="{'invisible-block': !$ctrl.isDemoMode() && $ctrl.version.spec.runtime !== 'java'}"
                         class="configuration-block"
                         data-version="$ctrl.version"
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-logging>
