Code: Add "Work Dir" to "Archive" code entry type

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -104,6 +104,22 @@
                     </igz-validating-input-field>
                 </div>
 
+                <div data-ng-if="$ctrl.selectedEntryType.name === 'Archive'"
+                     class="ncl-code-entry-url">
+                    <div class="field-label">Work Dir</div>
+                    <igz-validating-input-field data-field-type="input"
+                                                data-input-name="archiveWorkDir"
+                                                data-input-value="$ctrl.version.spec.build.codeEntryAttributes.workDir"
+                                                data-is-focused="false"
+                                                data-form-object="$ctrl.versionCodeForm"
+                                                data-validation-is-required="false"
+                                                data-placeholder-text="For example: /path/to/functions"
+                                                data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                data-update-data-field="spec.build.codeEntryAttributes.workDir"
+                                                class="nuclio-validating-input">
+                    </igz-validating-input-field>
+                </div>
+
                 <div data-ng-if="$ctrl.selectedEntryType.name === 'GitHub'"
                      class="ncl-code-entry-url">
                     <div class="field-label">URL</div>
