Code: Add "Work Dir" to "Archive" code entry type (fixed)

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -77,7 +77,7 @@
                     <div class="field-label">URL</div>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="image"
-                                                data-input-value="$ctrl.image"
+                                                data-input-value="$ctrl.version.spec.build.path"
                                                 data-is-focused="true"
                                                 data-form-object="$ctrl.versionCodeForm"
                                                 data-validation-is-required="true"
@@ -93,7 +93,7 @@
                     <div class="field-label">URL</div>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="archive"
-                                                data-input-value="$ctrl.archive"
+                                                data-input-value="$ctrl.version.spec.build.path"
                                                 data-is-focused="true"
                                                 data-form-object="$ctrl.versionCodeForm"
                                                 data-validation-is-required="true"
