--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -77,7 +77,7 @@
                     <div class="field-label">URL</div>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="image"
-                                                data-input-value="$ctrl.image"
+                                                data-input-value="$ctrl.version.spec.build.path"
                                                 data-is-focused="true"
                                                 data-form-object="$ctrl.versionCodeForm"
                                                 data-validation-is-required="true"
@@ -93,13 +93,29 @@
                     <div class="field-label">URL</div>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="archive"
-                                                data-input-value="$ctrl.archive"
+                                                data-input-value="$ctrl.version.spec.build.path"
                                                 data-is-focused="true"
                                                 data-form-object="$ctrl.versionCodeForm"
                                                 data-validation-is-required="true"
                                                 data-placeholder-text="Type path..."
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                 data-update-data-field="spec.build.path"
+                                                class="nuclio-validating-input">
+                    </igz-validating-input-field>
+                </div>
+
+                <div data-ng-if="$ctrl.selectedEntryType.name === 'Archive'"
+                     class="ncl-code-entry-url">
+                    <div class="field-label">Work Dir</div>
+                    <igz-validating-input-field data-field-type="input"
+                                                data-input-name="archiveWorkDir"
+                                                data-input-value="$ctrl.version.spec.build.codeEntryAttributes.workDir"
+                                                data-is-focused="false"
+                                                data-form-object="$ctrl.versionCodeForm"
+                                                data-validation-is-required="false"
+                                                data-placeholder-text="For example: /path/to/functions"
+                                                data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                data-update-data-field="spec.build.codeEntryAttributes.workDir"
                                                 class="nuclio-validating-input">
                     </igz-validating-input-field>
                 </div>
