Configuration/Build: Java specific (fixed)

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -91,12 +91,12 @@
                 <div class="field-label">Dependencies</div>
                 <igz-validating-input-field data-field-type="textarea"
                                             data-input-name="dependencies"
-                                            data-input-value="$ctrl.build.runtimeAttributes.dependencies"
+                                            data-input-value="$ctrl.build.dependencies"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="runtimeAttributes.dependencies"
+                                            data-update-data-field="dependencies"
                                             class="nuclio-validating-input build-dependencies-field">
                 </igz-validating-input-field>
             </div>
