--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -63,14 +63,15 @@
                 <div class="field-label">Readiness timeout (seconds)</div>
                 <igz-number-input data-form-object="$ctrl.buildForm"
                                   data-input-name="readinessTimeout"
-                                  data-current-value="$ctrl.version.spec.build.readinessTimeout"
+                                  data-current-value="$ctrl.version.spec.readinessTimeout"
                                   data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
-                                  data-update-number-input-field="spec.build.readinessTimeout"
+                                  data-update-number-input-field="spec.readinessTimeout"
                                   data-allow-empty-field="false"
                                   data-value-step="1"
                                   data-validation-is-required="true"
                                   data-min-value="0"
-                                  data-default-value="60"></igz-number-input>
+                                  data-default-value="60">
+                </igz-number-input>
             </div>
             <div class="igz-col-100 build-field"
                  data-ng-if="$ctrl.version.spec.runtime === 'java'">
