Fix [Nuclio] Code entry attributes are falsely sent
Only properties relevant to the selected "Code Entry Type" should be
sent in the deploy request.

Also fix the following:
- `spec.image` is not loaded in "URL" field on function screen init.
- "Worker Allocator Name" is falsely displayed in "Data Bindings".

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -77,7 +77,7 @@
                     <div class="field-label">URL</div>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="image"
-                                                data-input-value="$ctrl.version.spec.build.path"
+                                                data-input-value="$ctrl.version.spec.image"
                                                 data-is-focused="true"
                                                 data-form-object="$ctrl.versionCodeForm"
                                                 data-validation-is-required="true"
