--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -1,5 +1,5 @@
 <div class="test-events-pane"
-     data-ng-class="{'fixed-left-bar': $ctrl.fixedLeftBar, 'test-pane-closed': $ctrl.isTestPaneClosed}">
+     data-ng-class="{'fixed-left-bar': $ctrl.fixedLeftBar}">
     <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
     <div data-ng-class="{'visible': $ctrl.showLeftBar}"
          class="left-bar">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div data-ui-layout="{ flow : 'row', dividerSize: 2 }">
+            <div data-ui-layout="{ flow : 'row', dividerSize: 5 }">
                 <div ui-layout-container size="45%" min-size="100px" class="request-section">
                     <div class="igz-scrollable-container scrollable-request-section"
                          data-ng-scrollbars
