--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -66,9 +66,9 @@
                                   data-current-value="$ctrl.version.spec.readinessTimeoutSeconds"
                                   data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
                                   data-update-number-input-field="spec.readinessTimeoutSeconds"
-                                  data-allow-empty-field="false"
+                                  data-allow-empty-field="true"
                                   data-value-step="1"
-                                  data-validation-is-required="true"
+                                  data-validation-is-required="false"
                                   data-min-value="0"
                                   data-default-value="60">
                 </igz-number-input>
