Add tooltip to Target CPU

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -26,6 +26,10 @@
                                             data-slider-block-updating-broadcast=""
                                             data-on-change-callback="$ctrl.sliderInputCallback"
                                             data-update-slider-input="spec.targetCPU"
+                                            data-uib-tooltip="Exceeding this threshold will increase the number of replicas"
+                                            data-tooltip-append-to-body="true"
+                                            data-tooltip-placement="bottom"
+                                            data-tooltip-popup-delay="500"
                                             data-allow-full-range="true"></igz-slider-input-block>
                 </div>
             </div>
