--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -68,9 +68,11 @@
                                     data-function-source-code="$ctrl.sourceCode"
                                     data-mini-monaco="false"
                                     data-selected-theme="$ctrl.selectedTheme.id"
+                                    data-show-text-size-dropdown="true"
                                     data-language="$ctrl.editorLanguage"
                                     data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode, language)"
-                                    data-read-only="false"></ncl-monaco>
+                                    data-read-only="false">
+                        </ncl-monaco>
                     </div>
 
                     <div data-ng-if="$ctrl.selectedEntryType.name === 'Image'"
