--- a/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
+++ b/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
@@ -53,16 +53,18 @@
 
 <div class="buttons">
     <button class="ncl-secondary-button"
-         tabindex="0"
-         data-ng-click="$ctrl.onClose()"
-         data-ng-keydown="$ctrl.onClose($event)">
+            data-test-id="projects.new-project_cancel.button"
+            tabindex="0"
+            data-ng-click="$ctrl.onClose()"
+            data-ng-keydown="$ctrl.onClose($event)">
         Cancel
     </button>
     <button class="ncl-primary-button"
-         tabindex="0"
-         data-ng-click="$ctrl.createProject()"
-         data-ng-keydown="$ctrl.createProject($event)"
-         data-ng-hide="$ctrl.isLoadingState">
+            data-test-id="projects.new-project_create.button"
+            tabindex="0"
+            data-ng-click="$ctrl.createProject()"
+            data-ng-keydown="$ctrl.createProject($event)"
+            data-ng-hide="$ctrl.isLoadingState">
         Create
     </button>
     <button class="ncl-primary-button" data-ng-show="$ctrl.isLoadingState">Loading...</button>
