Impl [Nuclio] Configuration: Volumes: add Secret and Config Map
Trello card: https://trello.com/c/dmy24ri4

--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -57,7 +57,7 @@
                 <ncl-version-configuration-volumes
                         class="configuration-block"
                         data-version="$ctrl.version"
-                        data-on-change-callback="$ctrl.onConfigurationChangeCallback">
+                        data-on-change-callback="$ctrl.onConfigurationChangeCallback()">
                 </ncl-version-configuration-volumes>
             </div>
         </div>
