--- a/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
@@ -19,7 +19,7 @@
                                         data-item="trigger"
                                         data-type="trigger"
                                         data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
-                        <ncl-edit-item class="common-table-cells-container edit-binding-row"
+                        <ncl-edit-item class="common-table-cells-container edit-trigger-row"
                                        data-item="trigger"
                                        data-type="trigger"
                                        data-on-submit-callback="$ctrl.editTriggerCallback(item)"></ncl-edit-item>
