--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -39,7 +39,7 @@
                                             data-type="volume"
                                             data-list-class="scrollable-volumes"
                                             data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
-                            <ncl-edit-item class="common-table-cells-container edit-binding-row"
+                            <ncl-edit-item class="common-table-cells-container edit-volume-row"
                                            data-item="volume"
                                            data-type="volume"
                                            data-on-submit-callback="$ctrl.editVolumeCallback(item)"></ncl-edit-item>
