Added more space for build commands in configuration

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -20,7 +20,7 @@
                                             class="nuclio-validating-input">
                 </igz-validating-input-field>
             </div>
-            <div class="igz-col-100 build-field">
+            <div class="igz-col-50 build-field build-base-image-field">
                 <div class="field-label">Base image</div>
                 <igz-validating-input-field data-field-type="input"
                                             data-input-name="baseImage"
@@ -33,7 +33,7 @@
                                             class="nuclio-validating-input">
                 </igz-validating-input-field>
             </div>
-            <div class="igz-col-100 build-field">
+            <div class="igz-col-50 build-field build-onbuild-image-field">
                 <div class="field-label">Onbuild image</div>
                 <igz-validating-input-field data-field-type="input"
                                             data-input-name="onbuildImage"
@@ -56,7 +56,7 @@
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="commands"
-                                            class="nuclio-validating-input build-command-field">
+                                            class="nuclio-validating-input build-textarea-input build-commands-input">
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field">
@@ -84,7 +84,7 @@
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="runtimeAttributes.repositories"
-                                            class="nuclio-validating-input build-dependencies-field">
+                                            class="nuclio-validating-input build-textarea-input">
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field"
@@ -98,7 +98,7 @@
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="dependencies"
-                                            class="nuclio-validating-input build-dependencies-field">
+                                            class="nuclio-validating-input build-textarea-input">
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field build-checkboxes">
