Revert [Nuclio] Add support to function templates with params
Reverts PR #365 because back-end was not ready.

This reverts commit b27dc1e1c63db9f6d2b9082aadf5df2609f795e7.

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -70,7 +70,7 @@
 
                 <div class="function-template-content">
                     <div class="template-title">{{key}}</div>
-                    <div class="template-description">{{value.rendered.spec.description}}</div>
+                    <div class="template-description">{{value.spec.description}}</div>
                 </div>
             </div>
         </div>
