When creating a function, pressing "enter" should click the "create" button

--- a/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -49,8 +49,8 @@
                     <div class="bottom-bar">
                         <button class="ncl-secondary-button" data-ng-click="$ctrl.cancelCreating($event)">CANCEL</button>
                         <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()"
-                                data-ng-disabled="!$ctrl.isCreateFunctionAllowed"
-                                data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed}">CREATE FUNCTION</button>
+                                data-ng-disabled="!$ctrl.isCreateFunctionAllowed()"
+                                data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed()}">CREATE FUNCTION</button>
                     </div>
                 </div>
             </div>
