--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -122,7 +122,8 @@
                                                                  data-external-address="$ctrl.externalIPAddress"
                                                                  data-functions-list="$ctrl.functions"
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
-                                                                 data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})">
+                                                                 data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
+                                                                 data-on-update-function="$ctrl.onUpdateFunction({function: function, projectID: projectID})">
                                     </ncl-function-collapsing-row>
                                 </div>
                             </div>
