--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -22,7 +22,10 @@
             <div class="igz-col-10 common-table-cell">
                 {{$ctrl.convertedStatusState}}
                 <div class="status-icon"
-                     data-ng-class="$ctrl.getStatusIcon()"
+                     data-uib-tooltip="{{$ctrl.getTooltip()}}"
+                     data-tooltip-append-to-body="true"
+                     data-tooltip-placement="top"
+                     data-ng-class="$ctrl.statusIcon"
                      data-ng-click="$ctrl.toggleFunctionState($event)">
                 </div>
             </div>
