--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -123,7 +123,8 @@
                                                                  data-functions-list="$ctrl.functions"
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
                                                                  data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
-                                                                 data-on-update-function="$ctrl.onUpdateFunction({function: function, projectID: projectID})">
+                                                                 data-on-update-function="$ctrl.onUpdateFunction({function: function, projectID: projectID})"
+                                                                 data-get-function="$ctrl.getFunction({metadata: metadata, projectID: projectID})">
                                     </ncl-function-collapsing-row>
                                 </div>
                             </div>
