Moved timeout block to demo mode

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -9,7 +9,7 @@
                    data-ng-change="$ctrl.updateEnableStatus()">
             <label for="enable" class="checkbox-inline">Enabled</label>
         </div>
-        <div class="row">
+        <div class="row" data-ng-if="$ctrl.isDemoMode()">
             <div class="timeout-block">
                 <div class="label">
                     <div class="timeout-checkbox">
